Working sidebars, kph and rpm meter drawing, background map

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,6 +6,9 @@
     >
 
     
+<android.opengl.GLSurfaceView android:id="@+id/overlay_gl_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
 </LinearLayout>
 
